--- a/iara.html
+++ b/iara.html
@@ -4,26 +4,26 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="iara.css" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     </head>
     <body>
-        <section>
-            <div>
+        <section class="secao"> 
+            <div class="blocos">
                 <i class="fa fa-bar-chart" aria-hidden="true"></i>
                 <h1>Section Title</h1>
                 <h2>Heading of this section</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam facere eaque officia repellat soluta, laboriosam sunt doloremque enim ducimus repudiandae fugit accusantium expedita, porro numquam rem, qui reiciendis voluptate odio.</p>
             </div>
 
-            <div>
+            <div class="blocos">
                 <i id="usuario" class="fa fa-user" aria-hidden="true"></i>
                 <h1>Section Title</h1>
                 <h2>Heading of this section</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam facere eaque officia repellat soluta, laboriosam sunt doloremque enim ducimus repudiandae fugit accusantium expedita, porro numquam rem, qui reiciendis voluptate odio.</p>
             </div>
 
-             <div>
+             <div class="blocos">
                 <i class="fa fa-file-text-o" aria-hidden="true"></i>
                 <h1>Section Title</h1>
                 <h2>Heading of this section</h2>
