change image source

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>layout-1</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     </head>
     <body>
@@ -20,7 +20,7 @@
                 </div>
                 
                 <figure class="step-1-phone">
-                    <img src="C:\Users\Flávia\layout-1\img\iphone1.png">
+                    <img src="img/iphone1.png">
                 </figure>
             </article>
 
@@ -33,7 +33,7 @@
                 </div>
                 
                 <figure class="step-2-phone">
-                    <img src="C:\Users\Flávia\layout-1\img\iphone1.png">
+                    <img src="img/iphone1.png">
                 </figure>
             </article> 
 
@@ -46,7 +46,7 @@
                 </div>
 
                 <figure class="step-3-phone">
-                    <img src="C:\Users\Flávia\layout-1\img\iphone1.png">
+                    <img src="img/iphone1.png">
                 </figure>
             </article> 
         </section>
