--- a/form.html
+++ b/form.html
@@ -7,20 +7,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Form</title>
 </head>
-<body class="form_body">
-    <h1 class="form_header">Get in touch</h1>
-    <form class="form_content">       
-      <label class="form_label">Nome:*</label>  
-        <input class="form_text" type="text" name="Username" id="Username">
-    <label class="form_label">Email Adress:*</label>  
-        <input class="form_text" type="email" name="Email" id="Email">
-    <label class="form_label">Subject:*</label>  
-        <input class="form_text" type="email" name="Email" id="Email">
-    <label class="form_label">Message:*</label>
-         <textarea name="textarea" rows="05" cols="100%"></textarea>
-         <input class="form_button" type="button" name="button" id="button" value="Submit">       
-    </form>
-    <footer class="form_footer" >© TinyLove 2013</footer>
+<body>
+
+    <section class="form_section">
+
+        <h1 class="form_header">Get in touch</h1>
+
+        <form class="form_box">       
+            <label class="form_label">Nome:*</label>  
+                <input class="form_text" type="text" name="Username" id="Username">
+            <label class="form_label">Email Adress:*</label>  
+                <input class="form_text" type="email" name="Email" id="Email">
+            <label class="form_label">Subject:*</label>  
+                <input class="form_text" type="email" name="Email" id="Email">
+            <label class="form_label">Message:*</label>
+                <textarea name="textarea" rows="08" cols="200"></textarea>
+                <input class="form_button" type="button" name="button" id="button" value="Submit">       
+        </form>
+
+        <footer class="form_footer" >© TinyLove 2013</footer>
+    </section>
     
 </body>
 </html>
