--- a/header.html
+++ b/header.html
@@ -5,38 +5,41 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/header.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/9dba0b7568.js"></script>
 </head>
 
 <body>
-    <header>
-        <img src="#" alt="logo">
-        <h4>INTRODUCTING</h4>
-        <h1>TinyLove</h1>
-        <ul>
-            <li>
-                <a href="#"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
+    <header class="hero">
+        <img class="hero__logo" src="img/tiny.png" alt="logo">
+        <p class="hero__intro">INTRODUCTING</p>
+        <h1 class="hero__titulo">TinyLove</h1>
+        <div>
+            <ul class="hero__social-media-icons">
+                <li class="hero__social-media-icons">
+                    <a href="#"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
 
-            </li>
-            <li>
-                <a href="https://www.facebook.com"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                </li>
+                <li class="hero__social-media-icons">
+                    <a href="https://www.facebook.com"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 
-            </li>
-            <li>
-                <a href="https://twitter.com/login?lang=pt"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                </li>
+                <li class="hero__social-media-icons">
+                    <a href="https://twitter.com/login?lang=pt"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
-            </li>
-        </ul>
-
-        <img src="#" alt="celularmao">
-        <div class="entincing">
-            <h2>entincing statement goes here</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat iure error, provident iusto, earum quo quidem, fugiat atque dicta voluptas non nobis animi aliquam cumque! In doloremque tenetur rem amet.</p>
+                </li>
+            </ul>
         </div>
-        <a href="#"> <img src="img/google.png" alt="logoappgoogle"> </a>
-        <a href="#"> <img src="img/apple.png" alt="logoappapple"> </a>
 
+        <div class="hero__description">
+            <p class="hero__entincing"> Entincing statement goes here</p>
+            <p class="hero__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, quod, tempore. Sit nesciunt sapiente deserunt alias ipsam. Maxime nostrum dolorem voluptatibus iusto! Provident illum ut deleniti porro enim, iure totam?</p>
+        </div>
+
+        <div class="hero__div-btnapp">
+            <a href="#"> <img class="hero__buttonapp" src="img/google.jpeg" alt="logoappgoogle"> </a>
+            <a href="#"> <img class="hero__buttonapp" src="img/apple.jpeg" alt="logoappapple"> </a>
+        </div>
     </header>
 
 </body>
