--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     </head>
     <body>
+        <header class="hero">
+            <img class="hero__logo" src="img/tiny.png" alt="logo">
+            <p class="hero__intro">INTRODUCTING</p>
+            <h1 class="hero__titulo">TinyLove</h1>
+            <div>
+                <ul class="hero__social-media-icons">
+                    <li class="hero__social-media-icons">
+                        <a href="#"> <i class="fa fa-envelope" aria-hidden="true"></i></a>
+
+                    </li>
+                    <li class="hero__social-media-icons">
+                        <a href="https://www.facebook.com"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+
+                    </li>
+                    <li class="hero__social-media-icons">
+                        <a href="https://twitter.com/login?lang=pt"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+
+                    </li>
+                </ul>
+            </div>
+
+            <div class="hero__description">
+                <p class="hero__entincing"> Entincing statement goes here</p>
+                <p class="hero__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, quod, tempore. Sit nesciunt sapiente deserunt alias ipsam. Maxime nostrum dolorem voluptatibus iusto! Provident illum ut deleniti porro enim, iure totam?</p>
+            </div>
+
+            <div class="hero__div-btnapp">
+                <a href="#"> <img class="hero__buttonapp" src="img/google.jpeg" alt="logoappgoogle"> </a>
+                <a href="#"> <img class="hero__buttonapp" src="img/apple.jpeg" alt="logoappapple"> </a>
+            </div>
+        </header>
+
         <section class="reasons-to-use">
           
             <div class="reasons-to-use__box">
